# hakka_breakout

./: CMakeLists.txt  README.md
hakka/: CMakeLists.txt
hakka/cmake/: External_glad.cmake
hakka/incl/hakka/: App.h  Color.h  Drawable.h  Event.h  GL.h  IStateMachine.h  Keyboard.h  Rect.h  RenderStates.h  RenderTarget.h  RenderWindow.h  ResourceHandler.h  ResourceHandler.inl  Shader.h  Sprite.h  State.h  Text.h  Texture.h  Transform.h  Transformable.h  Vector2.h  View.h  Window.h
hakka/src/: App.cpp  Color.cpp  Drawable.cpp  Event.cpp  IStateMachine.cpp  RenderStates.cpp  RenderTarget.cpp  RenderWindow.cpp  Shader.cpp  Sprite.cpp  State.cpp  Text.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  Window.cpp
incl/game/: Action.h  App.h  Audio.h  Ball.hpp  BounceAnimation.h  Collisions.h  Collisions.hpp  Components.h  Configuration.hpp  EcsState.h  Entity.h  GameObject.h  GameObject.hpp  GameState.h  GameState.hpp  GameUI.hpp  IDs.hpp  IntroState.h  Level.h  Level.hpp  LevelBlock.hpp  MenuState.h  MenuState.hpp  Message.hpp  MessageBus.hpp  MessageIDs.hpp  Particle.h  ParticleEmitter.h  ParticleEmitter.hpp  PauseState.h  PauseState.hpp  PowerUp.h  PowerupSystem.hpp  Runner.hpp  Scene.h  ShopState.hpp  SpriteRenderSystem.h  State.h  StateMachine.h  System.h  (+3 more)
incl/game/ecs/: Entity.h  Message.h  MessageBus.h  Scene.h  System.h
incl/game/gui/: Button.h  Button.hpp  Gui.h  INode.h  Label.hpp  TextButton.hpp
res/: config.ini  game.ini
res/shaders/: effects.fs  particle.fs  particle.vs
src/: App.cpp  Audio.cpp  Ball.cpp  BallObject.cpp  BounceAnimation.cpp  Collisions.cpp  Components.cpp  EcsState.cpp  Entity.cpp  FileManager.cpp  GameObject.cpp  GameState.cpp  GameUI.cpp  InputManager.cpp  IntroState.cpp  Level.cpp  LevelBlock.cpp  MenuState.cpp  MessageBus.cpp  ParallaxEffect.cpp  Particle.cpp  ParticleEmitter.cpp  PauseState.cpp  PostProcessing.cpp  PoweupSystem.cpp  Runner.cpp  Runner.hpp  Scene.cpp  ShopState.cpp  SpriteRenderSystem.cpp  State.cpp  StateMachine.cpp  System.cpp  Timer.cpp  World.cpp  level.cpp  main.cpp
src/ecs/: Entity.cpp  EntityManager.cpp  MessageBus.cpp  Scene.cpp  System.cpp  SystemManager.cpp
src/filesystem/: MacOSFileSystem.cpp  WinFileSystem.hpp
src/gui/: Button.cpp  Gui.cpp  INode.cpp  Label.cpp  TextButton.cpp
